--- a/index.html
+++ b/index.html
@@ -405,6 +405,6 @@
 
         <!--========Scripts===== -->
         <script src="./files/script.js"></script>
-
+<script type='text/javascript' src='//pl26396480.profitableratecpm.com/15/66/0e/15660e75f2b8de1cbaeffe0ff462369a.js'></script>
     </body>  
 </html>
